Fix alignments

--- a/src/styles/propSelector.css
+++ b/src/styles/propSelector.css
@@ -1,7 +1,7 @@
 .propSelector p {
     font-size: 0.8em;
     font-weight: bold;
-    margin-bottom: 0;
+    margin: 0;    
     padding-top: 5px;
 }
 .propSelector p.right {
